<resources>
    <string name="app_name">My Test App</string>
    <string name="edit_message1">Enter an Author</string>
    <string name="edit_message2">Enter a Title</string>
    <string name="edit_message3">Username</string>
    <string name="edit_message4">Password</string>
    <string name="button_login">Login</string>
    <string name="button_send">Send</string>
    <string name="search_text">Search for books</string>
    <string name="search_rejection">No books match the search criteria</string>
    <string name="search_title">Title</string>
    <string name="search_author">Author</string>
</resources>
